
- https://github.com/eclipse-sirius/sirius-components/issues/1118[#1118] [core] Switch to Spring Boot 2.6.6
- https://github.com/eclipse-sirius/sirius-components/issues/1118[#1118] [core] Switch to GraphQL Java 18.0
- https://github.com/eclipse-sirius/sirius-components/issues/1118[#1118] [core] Switch to Sirius Desktop 7.0.0

=== Bug fixes

=== Improvements

=== New features

== v2022.3.0

=== Architectural decision records

- [ADR-039] Provide a variable to detect the environment
- [ADR-040] Add support for a post selection
- [ADR-041] Add the ability to contribute additional services to the EMFQueryService
- [ADR-042] Use wildcard collections instead of List<Object> in Providers
- [ADR-043] Consider multiple objects as the input of a form
- [ADR-044] Use border node "snap to parent container" algorithm
- [ADR-045] Allow the explorer to reveal the current selection
- [ADR-046] Make the workbench panels' content configurable
- [ADR-047] Add support for tools preconditions
- [ADR-048] Rename concepts related to tools
- [ADR-049] Improve the incremental layout for dropper elements

=== Deprecation warning
- [core] The various DTOs related to the creation and renaming of both documents and representations will be removed from the project at some point. The only reason why we will keep them for the moment is that some of them are used to trigger some specific behavior in the `EditingContextEventProcessor`. The split of the representation metadata should help us remove those special use cases
- [core] The method `IRepresentationMetadataSearchService#findByRepresentation` will be deleted in the future, it only exists as a transition from requesting the whole content of a representation everytime to requesting only its metadata when it's necessary